# hypercube-python-operators

./: .gitignore  catalog.py  entrypoint.py  pyproject.toml  test_catalog.py
market_importer/: market_importer.py  stratergies.py
market_importer/tests/: test_market_importer.py
src/: catalog.py  entrypoint.py  test_catalog.py
src/market_importer/: market_importer.py  metadata.py  stratergies.py  test_market_importer.py
src/runtime/: catalog_base.py  command_line.py  communication.py  component_definition.py  context.py  enums.py  operator_definition.py  persistance.py  runtimes.py  test_communication.py
src/runtime/tests/: conftest.py  test_communication.py  test_component_definition.py
src/runtime/tests/integration/: test_cli.py
