[project]
name = "hypercube-python-operators"
version = "0.1.0"
description = "Basic python operators for the hypercube project"
authors = [{ name = "Alejandro Agustin" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "pandas>=2.2.3,<3",
    "pydantic>=2.10.4,<3",
    "pyarrow>=18.1.0,<19",
    "pyyaml==6.0.2",
    "annotated-types>=0.7.0",
    "tomlkit>=0.13.2"
]

[project.optional-dependencies]
dev = [
    "coverage>=7.5.2,<8",
    "pytest>=8.2.1,<9",
    "ruff>=0.4.5,<0.5",
    "bandit>=1.7.8,<2",
    "black>=24,<25",
    "setuptools>=75.8.0",
    "pytest-datadir"
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:.*U.*mode is deprecated:DeprecationWarning'
]
addopts = [
    "--import-mode=importlib",
    "--doctest-modules"
]
doctest_optionflags = "NORMALIZE_WHITESPACE IGNORE_EXCEPTION_DETAIL NUMBER"
